Fixed error with large container on carosel and fixed an image alignment issue. Added event poster

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
+
 body {
     font-size: 10px;
     background-color: #181818;
@@ -80,14 +81,16 @@ header {
 
 .carosel-container {
     overflow: hidden;
-    max-width: 700px;
-    min-height: 337px;
-    margin: auto;
+    margin: auto; 
 }
 
 .carousel {
     max-width: 100%;
     max-height: 100%;
+}
+
+#event-poster {
+    opacity: 0.5;
 }
 
 /*---- Gallery Page ----*/
@@ -137,3 +140,13 @@ footer {
     color: #1e7e34;
 }
 
+/*---- Media Queries ----*/
+
+@media only screen and (min-width: 700px) {
+    .carosel-container {
+        overflow: hidden;
+        max-width: 700px;
+        min-height: 337px;
+        margin: auto; 
+    }
+}
